# bh-deploy

./: .env  .env.example  .prettierignore  .prettierrc.js  LOGGING.md  build-tauri.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: beat-hard-bundle-actions.yml
src/: App.tsx  MainRoutes.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/: model.onnx
src-tauri/icons/: icon.icns
src-tauri/src/: ble.rs  broadcast_ws.rs  combat_types.rs  lib.rs  main.rs
src-tauri/src/ble/: commands.rs  connection.rs  detection.rs  state.rs  types.rs
src-tauri/static/: index.html  package-lock.json  package.json
src-tauri/static/src/: index.js
src-tauri/static/src/components/: App.jsx  CoverScreen.jsx  FighterCard.jsx  HitHistorySidebar.jsx  LiveCombatScreen.jsx  PlayerStatsCard.jsx  RoundStatsScreen.jsx  SummaryStatsScreen.jsx  VSSection.jsx
src-tauri/static/src/hooks/: useCombatData.js
src-tauri/static/src/stores/: useWebSocketStore.js
src-tauri/static/src/utils/: measurementUtils.js  nationalityUtil.js
src/components/: BleServicesList.tsx
src/features/battle-arena/: BattleArenaScreen.tsx
src/features/fighters/: FighterScreen.tsx
src/features/home/: HomeScreen.tsx
src/shared/components/: Header.tsx  Logo.tsx
src/shared/hooks/: useBroadcastCleanup.ts  useUploadImage.tsx  useWebSocketBroadcast.ts
src/shared/layout/: RootLayout.tsx
src/shared/repositories/: FirestoreRepository.ts
src/shared/stores/: useBLEStore.ts
src/shared/types/: crud.ts  index.ts  (+1 more)
(+76 files in other folders)
