[package]
name = "beat-hard-combat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beat_hard_combat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
uuid = "1.17.0"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "sync", "net"] }
futures = "0.3.31"
bluest = "0.6.9"
# Logging optimizado para rendimiento
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP + WebSocket server for broadcast
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
once_cell = "1.19.0"
